--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: install requirements
         run: |
           pip install .
-          pip install https://github.com/fgregg/python-muckrock/archive/main.zip
+          pip install git+https://github.com/fgregg/python-muckrock.git#egg=python-muckrock
 
       - name: send forest's FOIAs
         run: foia_send forest_requests/* -n
