--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
       - name: send forest's FOIAs
         env:
           MUCKROCK_API_KEY: ${{ secrets.FOREST_MUCKROCK_API_KEY }}
-        run: foia_send forest_requests/* -n
+        run: foia_send forest_requests/* -y
 
