--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,7 @@ jobs:
       - uses: actions/setup-python@v2
         
       - name: install requirements
-        run: |
-          pip install .
-          pip install git+https://github.com/fgregg/python-muckrock.git#egg=python-muckrock
+        run: pip install .
 
       - name: send forest's FOIAs
         env:
